--- a/src/components/molecules/Panel/panel.css
+++ b/src/components/molecules/Panel/panel.css
@@ -82,3 +82,8 @@
   text-align: center;
   justify-content: flex-end;
 }
+
+.alert-icon {
+  margin-left: 10px;
+  margin-bottom: -2px;
+}
